{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "fa76ed1e-0494-4237-941d-0f8819e91115",
            "actions": [
                {
                    "name": "FirstFinger",
                    "type": "Value",
                    "id": "fd3c094a-967b-4ebc-911d-593564ff20d9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondFinger",
                    "type": "Value",
                    "id": "4ba43310-fc36-4334-81fb-56f396dbee5b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondFingerContact",
                    "type": "Button",
                    "id": "a2e2310d-acb7-44f5-89af-14d19027c58c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8b27f07-d236-43da-8291-c1da33e3e2ae",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b00c6b90-be5d-4b76-9189-3a11a122ec6c",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5310a93-ae45-4144-bfaf-021b28ecefd0",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondFingerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}